--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       </div>
 
       <div class="section-title">Education</div>
-      <div class="chip">National Forensic Sciences University <br>BTech-MTech (2022-2027)</div>
+      <div class="chip">National Forensic Sciences University <br>BTech-MTech Cybersecurity(2022-2027)</div>
 
       <div class="section-title">Achievements</div><hr>
       <div class="muted">Multiple CTF rankings & 2 Hackathon wins <br>CNSP and CAP exam by SecOps Group <br>Multiple Ideathons and Competitve Exams</div>
@@ -210,7 +210,7 @@
 
       <section class="hero">
         <div class="intro">
-          <div class="title">Building scalable and secure digital experiences.</div>
+          <div class="title">Building scalable and secure digital experiences.</div><hr>
           <div class="subtitle">I design resilient infrastructure, conduct VAPT, automate digital forensic workflows and build secure web apps. I blend systems thinking with hands-on pentesting and data-driven ML forensics.</div>
         </div>
       </section>
@@ -451,3 +451,4 @@ Disruption</strong><br><a href="https://drive.google.com/file/d/1wSuiiyjCzLCrwbv
 
 </body>
 </html>
+
