--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
       <div class="section-title">Achievements</div><hr>
       <div class="muted">Multiple CTF rankings & 2 Hackathon wins <br>CNSP and CAP exam by SecOps Group <br>Multiple Ideathons and Competitve Exams</div>
 
-      <div class="section-title">Download</div>
+      <!--<div class="section-title">Download</div>
       <div style="margin-top:8px;display:flex;gap:8px">
         <button id="downloadBtn" class="btn">Download CV</button>
-      </div>
+      </div>-->
 
       
     </aside>
@@ -451,4 +451,5 @@ Disruption</strong><br><a href="https://drive.google.com/file/d/1wSuiiyjCzLCrwbv
 
 </body>
 </html>
+
 
