--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             </div>
             <div class="project">
               <h4>Netra (Chain of Custody)
-                <br>[1st runner up at GIET Hackathon]
+                <br>[1st runner up at GCET Hackathon]
               </h4>
               <p>Blockchain-based tamper-proof evidence management (Flask, MongoDB) + AI chatbot for metadata search.</p>
             </div>
@@ -451,6 +451,7 @@ Disruption</strong><br><a href="https://drive.google.com/file/d/1wSuiiyjCzLCrwbv
 
 </body>
 </html>
+
 
 
 
