--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <!-- SIDEBAR -->
     <aside class="sidebar" aria-label="Sidebar with contact and skills">
       <div class="avatar">
-  <img src="https://media.licdn.com/dms/image/v2/D4D03AQHq8QBUwcAnRQ/profile-displayphoto-shrink_400_400/B4DZXmbyslG8Ak-/0/1743327800644?e=1760572800&v=beta&t=9BqMoUszknyhoHw49zL4fIf_cITzm3WEb1iOHXcU2x0" 
+  <img src="dp.jpg" 
        alt="Bikram Sadhukhan profile photo">
 
           <rect width="120" height="120" rx="18" fill="url(#g)"/>
@@ -451,6 +451,7 @@ Disruption</strong><br><a href="https://drive.google.com/file/d/1wSuiiyjCzLCrwbv
 
 </body>
 </html>
+
 
 
 
